# Angewandte-Programmierung-Project

./: README.md  api_tests.py  class_based_decorator.py  courses.json  frontend.py  main.py  notes.db  pyproject.toml  say_no.py  test_notes.py  work-log-template.md  work-log.md
data/: notes.json
my-first-api/: README.md  pyproject.toml
tests/: test_validation.py
