[project]
name = "angewandte-programmierung-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi[standard]>=0.128.8",
    "icecream>=2.2.0",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "sqlmodel>=0.0.34",
]

[tool.uv.workspace]
members = [
    "my-first-api",
]
